--- a/doc/binning.tex
+++ b/doc/binning.tex
@@ -28,7 +28,7 @@
 %  headsepline,%%
 %  footsepline,%%
   abstracton,%%
-  headings=small,%%
+  smallheadings,%%
 %  DIV=calc,%% recalculate page spread (Satzspiegel)
   DIV=12,%% divide page into N sections
   BCOR=10mm,%% binding margin (for twoside documents)
