--- a/doc/binning.tex
+++ b/doc/binning.tex
@@ -17,6 +17,7 @@
 % --------------------------------------------------------------------------
   11pt,%%
   a4paper,%%
+%  letterpaper,%%
   pagesize,%%
 %  openany,%%
 %  cleardoubleempty,%%
