--- a/doc/binning.tex
+++ b/doc/binning.tex
@@ -2,7 +2,8 @@
 %
 % file identification
 % --------------------------------------------------------------------------
-\def\FileTitle{Bayesian Binning}
+\def\FileTitle{Inductive Bayesian Inference of Piecewise Constant
+  Distributions}
 \def\FileKeywords{}
 \def\FileAuthor{Philipp F. Benner}
 \def\FileAuthorEmail{philipp.benner@mis.mpg.de}
@@ -112,9 +113,11 @@
 %\theoremstyle{plain}
 %\theoremstyle{definition}
 \newtheorem{definition}{Definition}
-\theoremstyle{remark}
 \newtheorem{example}{Example}
 \newtheorem{results}{Result}
+\newtheorem{lemma}{Lemma}
+\newtheorem{theorem}{Theorem}
+%\theoremstyle{remark}
 \usepackage{bbm}
 \usepackage{latexsym}
 \usepackage{exscale}
