--- a/doc/binning.tex
+++ b/doc/binning.tex
@@ -329,7 +329,7 @@
 % \backmatter
 % \renewcommand{\nomlabel}[1]{\textit{#1}}
 % \printnomenclature[1,3in]
-% \bibliography{master-thesis}
+\bibliography{binning}
 %\printindex
 %\input{master-thesis_affirmation.texinput}
 % --------------------------------------------------------------------------
