--- a/doc/binning.tex
+++ b/doc/binning.tex
@@ -2,7 +2,7 @@
 %
 % file identification
 % --------------------------------------------------------------------------
-\def\FileTitle{Inductive Bayesian Inference of Piecewise Constant
+\def\FileTitle{Inductive Bayesian Inference for Piecewise Constant
   Distributions}
 \def\FileKeywords{}
 \def\FileAuthor{Philipp F. Benner}
@@ -117,6 +117,7 @@
 \newtheorem{results}{Result}
 \newtheorem{lemma}{Lemma}
 \newtheorem{theorem}{Theorem}
+\newtheorem{corollary}{Corollary}
 %\theoremstyle{remark}
 \usepackage{bbm}
 \usepackage{latexsym}
