--- a/doc/binning.tex
+++ b/doc/binning.tex
@@ -47,6 +47,10 @@
 %{book}
 % --------------------------------------------------------------------------
 
+\usepackage{draftwatermark}
+\SetWatermarkText{DRAFT}
+\SetWatermarkLightness{0.8}
+
 % some additional packages
 % --------------------------------------------------------------------------
 % umlaut
