--- a/doc/binning.bib
+++ b/doc/binning.bib
@@ -1,4 +1,19 @@
-﻿@book{Finetti1974,
+﻿@article{Cox1946,
+  title = {Probability, Frequency, and Reasonable Expectation},
+  year = {1946},
+  author = {Richard Threlkeld Cox},
+  journal = {American Journal of Physics},
+  pages = {1--13},
+  volume = {14},
+}
+@book{Cox1961,
+  title = {The Algebra of Probable Inference},
+  year = {1961},
+  author = {Richard Threlkeld Cox},
+  publisher = {Johns Hopkins University Press},
+  isbn = {978-0801869822},
+}
+@book{Finetti1974,
   title = { Theory of Probability},
   publisher = {Wiley},
   year = {1974},
@@ -6,15 +21,15 @@
   address = {Chichester}
 }
 @incollection{Finetti1980,
- author = {de Finetti, Bruno},
- title = {On the Condition of Partial Exchangeability},
- pages = {193-205},
- publisher = {Univ. of Calif. Press},
- isbn = {0520038262},
- editor = {Jeffrey, Richard C.},
- booktitle = {Studies in inductive logic and probability},
- year = {1980},
- address = {Berkeley}
+  author = {de Finetti, Bruno},
+  title = {On the Condition of Partial Exchangeability},
+  pages = {193-205},
+  publisher = {Univ. of Calif. Press},
+  isbn = {0520038262},
+  editor = {Jeffrey, Richard C.},
+  booktitle = {Studies in inductive logic and probability},
+  year = {1980},
+  address = {Berkeley}
 }
 @book{Franklin2001,
   title = {The Science of Conjecture: Evidence and Probability before {Pascal}},
@@ -103,8 +118,16 @@
  year = {2005},
  address = {West Sussex, UK}
 }
+@article{Jaynes1957,
+ author = {Edwin Thompson Jaynes},
+ year = {1957},
+ title = {Information Theory and Statistical Mechanics},
+ pages = {171–190},
+ volume = {108},
+ journal = {Physical Review}
+}
 @article{Jaynes1968,
- author = {Jaynes, E. T.},
+ author = {Edwin Thompson Jaynes},
  year = {1968},
  title = {Prior Probabilities},
  pages = {227-241},
@@ -112,6 +135,13 @@
  number = {3},
  issn = {0536-1567},
  journal = {Systems Science and Cybernetics, IEEE Transactions on}
+}
+@book{Jaynes2003,
+ author = {Edwin Thompson Jaynes},
+ year = {2003},
+ title = {Probability Theory: The Logic of Science},
+ publisher = {Cambridge University Press},
+ isbn = {978-0521592710},
 }
 @book{Kuipers1978,
  author = {Kuipers, Theodorus A. F},
