--- a/doc/binning.bib
+++ b/doc/binning.bib
@@ -118,10 +118,18 @@
  year = {2005},
  address = {West Sussex, UK}
 }
-@article{Jaynes1957,
+@article{Jaynes1957a,
  author = {Edwin Thompson Jaynes},
  year = {1957},
  title = {Information Theory and Statistical Mechanics},
+ pages = {620–630},
+ volume = {106},
+ journal = {Physical Review}
+}
+@article{Jaynes1957b,
+ author = {Edwin Thompson Jaynes},
+ year = {1957},
+ title = {Information Theory and Statistical Mechanics II},
  pages = {171–190},
  volume = {108},
  journal = {Physical Review}
