--- a/doc/binning.tex
+++ b/doc/binning.tex
@@ -2,16 +2,15 @@
 %
 % file identification
 % --------------------------------------------------------------------------
-\def\FileTitle{Inductive Bayesian Inference for Piecewise Constant
-  Distributions}
+\def\FileTitle{Conglomerate}
 \def\FileKeywords{}
 \def\FileAuthor{Philipp F. Benner}
-\def\FileAuthorEmail{philipp.benner@mis.mpg.de}
+\def\FileAuthorEmail{philipp.benner@ini.phys.ethz.ch}
 \def\FileUniversity{MPG MiS}
 \def\FileFaculty{}
 \def\FileDepartment{}
 \def\FileAddress{}
-\def\FileDate{October 19, 2010}
+\def\FileDate{October 13, 2009}
 % --------------------------------------------------------------------------
 \documentclass[%
 % document options
