--- a/doc/binning.bib
+++ b/doc/binning.bib
@@ -1,4 +1,4 @@
-﻿@article{Cox1946,
+@article{Cox1946,
   title = {Probability, Frequency, and Reasonable Expectation},
   year = {1946},
   author = {Richard Threlkeld Cox},
@@ -37,6 +37,20 @@
   year = {2001},
   author = {J. Franklin},
   address = {Baltimore}
+}
+@article{Grassberger1988,
+  title = {Finite sample corrections to entropy and dimension estimates},
+  year = {1988},
+  author = {Peter Grassberger},
+  journal = {Physical Review A},
+  pages = {369--373},
+  volume = {128},
+}
+@article{Grassberger2008,
+  title = {Entropy Estimates from Insufficient Samplings},
+  year = {2008},
+  author = {Peter Grassberger},
+  journal = {arXiv:physics/0307138},
 }
 @book{Hacking1975,
   title = {The Emergence of Probability},
@@ -117,6 +131,21 @@
  booktitle = {Encyclopedia of Statistics in Behavioral Science},
  year = {2005},
  address = {West Sussex, UK}
+}
+@article{Nemenman2002,
+ author = {Nemenman and Shafee and Bialek},
+ title = {Entropy and Inference, Revisited},
+ year = {2002},
+ journal = {Advances in Neural Information Processing Systems},
+ volume = {14}
+}
+@article{Nemenman2004,
+ author = {Nemenman and Bialek},
+ title = {Entropy and information in neural spike trains: Progress on the sampling problem},
+ year = {2004},
+ journal = {Physical Review E},
+ volume = {69},
+ pages = {056111}
 }
 @article{Jaynes1957a,
  author = {Edwin Thompson Jaynes},
