--- a/doc/binning.bib
+++ b/doc/binning.bib
@@ -1,3 +1,11 @@
+@article{Adelman2003,
+  title = {The Information Content of Receptive Fields},
+  year = {2003},
+  author = {Adelman, Thomas L. and Bialek, William and Olberg, Robert M.},
+  journal = {Neuron},
+  pages = {823--833},
+  volume = {40},
+}
 @article{Cox1946,
   title = {Probability, Frequency, and Reasonable Expectation},
   year = {1946},
@@ -132,6 +140,12 @@
  year = {2005},
  address = {West Sussex, UK}
 }
+@article{Mora2010,
+ author = {Mora, Thierry and Bialek, William},
+ title = {Are biological systems poised at criticality?},
+ year = {2010},
+ journal = {arXiv:1012.2242},
+}
 @article{Nemenman2002,
  author = {Nemenman and Shafee and Bialek},
  title = {Entropy and Inference, Revisited},
@@ -209,6 +223,14 @@
  year = {1931},
  address = {London, UK}
 }
+@article{Shannon1948,
+ author = {Shannon, C. E.},
+ year = {1948},
+ title = {A mathematical theory of communication},
+ pages = {379--423 \& 623--656},
+ volume = {27},
+ journal = {Bell System Technical Journal}
+}
 @article{Stigler1982,
  author = {Stigler, Stephen M.},
  year = {1982},
@@ -235,6 +257,24 @@
  number = {164},
  issn = {00264423},
  journal = {Mind}
+}
+@article{Pitman1995,
+ author = {Jim Pitman},
+ year = {1995},
+ title = {Exchangeable and partially exchangeable random partitions},
+ pages = {145--158},
+ volume = {102},
+ number = {2},
+ journal = {Probability Theory and Related Fields}
+}
+@article{Strong1998,
+ author = {Strong, S. P. and Koberle, Roland and Steveninck, Rob R. de van Ruyter and Bialek, William},
+ year = {1998},
+ title = {Entropy and Information in Neural Spike Trains},
+ pages = {197--200},
+ volume = {80},
+ number = {1},
+ journal = {Physical Review Letters}
 }
 @book{Carnap1952,
  author = {Carnap, Rudolf},
