--- a/doc/binning.bib
+++ b/doc/binning.bib
@@ -185,7 +185,15 @@
  volume = {4},
  number = {3},
  issn = {0536-1567},
- journal = {Systems Science and Cybernetics, IEEE Transactions on}
+ journal = {IEEE Transactions on Systems Science and Cybernetics}
+}
+@article{Jaynes1986,
+ author = {Edwin Thompson Jaynes},
+ year = {1986},
+ title = {Some Applications and Extensions of the de Finetti Representation Theorem},
+ pages = {31-42},
+ publisher = {Amsterdam u.a. : North-Holland, 1986},
+ journal = {Bayesian inference, and decision techniques : essays in honor of Bruno de Finetti}
 }
 @book{Jaynes2003,
  author = {Edwin Thompson Jaynes},
