--- a/doc/binning.bib
+++ b/doc/binning.bib
@@ -291,6 +291,37 @@
  address = {Chicago},
  publisher = {The University of Chicago Press}
 }
+@article{Monteforte2010,
+ title = {Dynamical Entropy Production in Spiking Neuron Networks in the Balanced State},
+ author = {Monteforte, Michael  and Wolf, Fred },
+ journal = {Phys. Rev. Lett.},
+ volume = {105},
+ number = {26},
+ pages = {268104},
+ numpages = {4},
+ year = {2010},
+ month = {Dec},
+ doi = {10.1103/PhysRevLett.105.268104},
+ publisher = {American Physical Society}
+}
+@article{Tishby1999,
+ author = {Naftali Tishby and Fernando C. Pereira and William Bialek},
+ year = {1999},
+ title = {The Information Bottleneck Method},
+ pages = {368--377},
+ volume = {},
+ number = {},
+ journal = {}
+}
+@article{Schneidman2001,
+ author = {Elad Schneidman and Noam Slonim and Naftali Tishby and Rob R. de Ruyter van Steveninck and William Bialek},
+ year = {2001},
+ title = {Analyzing Neural Codes Using the Information Bottleneck Method},
+ pages = {},
+ volume = {},
+ number = {},
+ journal = {}
+}
 @article{Zabell1982,
  author = {Zabell, Sandy L.},
  year = {1982},
