--- a/doc/binning.tex
+++ b/doc/binning.tex
@@ -113,6 +113,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
+\usepackage{txfonts}
 %\theoremstyle{plain}
 %\theoremstyle{definition}
 \newtheorem{definition}{Definition}
