--- a/doc/macros.sty
+++ b/doc/macros.sty
@@ -3,6 +3,38 @@
 
 \RequirePackage{color}
 \RequirePackage{graphicx}
+% mathematical symbols
+% --------------------------------------------------------------------------
+\providecommand{\Dir}{\ensuremath{\mathrm{Dir}}}
+\providecommand{\Beta}{\ensuremath{\mathrm{Beta}}}
+
+\newcommand{\Yf}{\boldsymbol{Y}}
+\newcommand{\Xf}{\boldsymbol{X}}
+\newcommand{\pf}{\boldsymbol{p}}
+\newcommand{\Df}{\boldsymbol{D}}
+\newcommand{\Ef}{\boldsymbol{E}}
+\newcommand{\xf}{\boldsymbol{x}}
+\newcommand{\yf}{\boldsymbol{y}}
+\newcommand{\zf}{\boldsymbol{z}}
+\newcommand{\cf}{\boldsymbol{c}}
+\newcommand{\gf}{\boldsymbol{g}}
+\newcommand{\alphaf}{\boldsymbol{\alpha}}
+\newcommand{\betaf}{\boldsymbol{\beta}}
+\newcommand{\gammaf}{\boldsymbol{\gamma}}
+
+\newcommand{\nf}{\boldsymbol{n}}
+
+\newcommand{\xt}{\tilde{x}}
+\newcommand{\yt}{\tilde{y}}
+
+\newcommand{\Xc}{\mathcal{X}}
+\newcommand{\Yc}{\mathcal{Y}}
+\newcommand{\Fc}{\mathcal{F}}
+\newcommand{\Gc}{\mathcal{G}}
+\newcommand{\Hc}{\mathcal{H}}
+\newcommand{\Oc}{\mathcal{O}}
+\newcommand{\Pc}{\mathcal{P}}
+\newcommand{\Cc}{\mathcal{C}}
 
 % own macro definitions
 % --------------------------------------------------------------------------
