--- a/doc/conglomerate.bib
+++ b/doc/conglomerate.bib
@@ -6,6 +6,15 @@
   pages = {823--833},
   volume = {40},
 }
+@article{Blackwell1973,
+  title = {Ferguson Distribution via P\'olya Urn Schemes},
+  year = {1973},
+  author = {David Blackwell and James B. MacQueen},
+  journal = {The Annals of Statistics},
+  pages = {353--355},
+  volume = {1},
+  number = {2},
+}
 @article{Cox1946,
   title = {Probability, Frequency, and Reasonable Expectation},
   year = {1946},
@@ -21,8 +30,24 @@
   publisher = {Johns Hopkins University Press},
   isbn = {978-0801869822},
 }
+@article{Escobar1994,
+  title = {Estimating Normal Means with a Dirichlet Process Prior},
+  year = {1994},
+  author = {Escobar, M.D.},
+  journal = {Journal of the American Statistical Association},
+  pages = {268--277},
+  volume = {89},
+}
+@article{Escobar1995,
+  title = {Bayesian Density Estimation and Inference using Mixtures},
+  year = {1995},
+  author = {Escobar, M.D. and West, M.},
+  journal = {Journal of the American Statistical Association},
+  pages = {577--588},
+  volume = {90},
+}
 @book{Finetti1974,
-  title = { Theory of Probability},
+  title = {Theory of Probability},
   publisher = {Wiley},
   year = {1974},
   author = {Bruno {de Finetti}},
@@ -45,6 +70,24 @@
   year = {2001},
   author = {J. Franklin},
   address = {Baltimore}
+}
+@article{Ferguson1973,
+  title = {A Bayesian Analysis of some Nonparametric Problems},
+  year = {1973},
+  author = {Ferguson, Thomas S.},
+  journal = {The Annals of Statistics},
+  pages = {209--230},
+  volume = {1},
+  number = {2}
+}
+@article{Freedman1963,
+  title = {On the Asymptotic Behaviour of Bayes' Estimates in the Discrete Case},
+  year = {1963},
+  author = {Freedman, David A.},
+  journal = {The Annals of Mathematical Statistics},
+  pages = {1386--1403},
+  volume = {34},
+  number = {4}
 }
 @article{Grassberger1988,
   title = {Finite sample corrections to entropy and dimension estimates},
@@ -231,6 +274,14 @@
  year = {1931},
  address = {London, UK}
 }
+@article{Renyi1955,
+ author = {Alfr\'ed R\'enyi},
+ year = {1955},
+ title = {On a new axiomatic theory of probability},
+ pages = {285--335},
+ volume = {6},
+ journal = {Acta Mathematica Hungarica}
+}
 @article{Shannon1948,
  author = {Shannon, C. E.},
  year = {1948},
@@ -304,20 +355,28 @@
  doi = {10.1103/PhysRevLett.105.268104},
  publisher = {American Physical Society}
 }
-@article{Tishby1999,
- author = {Naftali Tishby and Fernando C. Pereira and William Bialek},
- year = {1999},
- title = {The Information Bottleneck Method},
- pages = {368--377},
- volume = {},
- number = {},
- journal = {}
-}
 @article{Schneidman2001,
  author = {Elad Schneidman and Noam Slonim and Naftali Tishby and Rob R. de Ruyter van Steveninck and William Bialek},
  year = {2001},
  title = {Analyzing Neural Codes Using the Information Bottleneck Method},
  pages = {},
+ volume = {},
+ number = {},
+ journal = {}
+}
+@article{Sethuraman1994,
+ author = {Jayaram Sethuraman},
+ year = {1994},
+ title = {A Constructive Definition of Dirichlet Priors},
+ pages = {639--650},
+ volume = {4},
+ journal = {Statistica Sinica}
+}
+@article{Tishby1999,
+ author = {Naftali Tishby and Fernando C. Pereira and William Bialek},
+ year = {1999},
+ title = {The Information Bottleneck Method},
+ pages = {368--377},
  volume = {},
  number = {},
  journal = {}
