--- a/doc/macros.sty
+++ b/doc/macros.sty
@@ -7,6 +7,10 @@
 % --------------------------------------------------------------------------
 \providecommand{\Dir}{\ensuremath{\mathrm{Dir}}}
 \providecommand{\Beta}{\ensuremath{\mathrm{Beta}}}
+\providecommand{\DP}{\ensuremath{\mathrm{DP}}}
+\providecommand{\Dis}{\ensuremath{\mathrm{Discrete}}}
+\providecommand{\E}{\ensuremath{\mathrm{E}}}
+\providecommand{\Var}{\ensuremath{\mathrm{Var}}}
 
 \newcommand{\Yf}{\boldsymbol{Y}}
 \newcommand{\Xf}{\boldsymbol{X}}
@@ -35,6 +39,11 @@
 \newcommand{\Oc}{\mathcal{O}}
 \newcommand{\Pc}{\mathcal{P}}
 \newcommand{\Cc}{\mathcal{C}}
+
+\newcommand{\valpha}{\vec{\alpha}}
+\newcommand{\vtheta}{\vec{\theta}}
+
+\newcommand{\dd}{\mathrm{d}}
 
 % own macro definitions
 % --------------------------------------------------------------------------
