--- a/doc/conglomerate.tex
+++ b/doc/conglomerate.tex
@@ -67,7 +67,7 @@
 \usepackage{wrapfig}
 \usepackage{graphicx}
 \usepackage{tikz}
-\usetikzlibrary[arrows,snakes,backgrounds]
+\usetikzlibrary[arrows,backgrounds]
 %\usepackage{fancyvrb}
 %\usepackage{fancybox}
 \usepackage[intoc]{nomencl}
@@ -140,7 +140,7 @@
 % title pages
 %\usepackage{emlix-title}
 % own macro definitions
-\usepackage{macros}
+\usepackage{conglomerate_macros}
 
 % font selection
 % --------------------------------------------------------------------------
