--- a/doc/conglomerate_macros.sty
+++ b/doc/conglomerate_macros.sty
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{macros}
+\ProvidesPackage{conglomerate_macros}
 
 \RequirePackage{color}
 \RequirePackage{graphicx}
