--- a/doc/conglomerate.bib
+++ b/doc/conglomerate.bib
@@ -6,6 +6,15 @@
   pages = {823--833},
   volume = {40},
 }
+@article{Antoniak1974,
+  title = {Mixtures of Dirichlet Processes with Applications to Bayesian Nonparametric Problems},
+  year = {1974},
+  author = {Antoniak, Charles E.},
+  journal = {The Annals of Statistics},
+  pages = {1152--1174},
+  volume = {2},
+  number = {6}
+}
 @article{Blackwell1973,
   title = {Ferguson Distribution via P\'olya Urn Schemes},
   year = {1973},
@@ -281,6 +290,15 @@
  pages = {285--335},
  volume = {6},
  journal = {Acta Mathematica Hungarica}
+}
+@article{Robbins1963,
+ author = {Robbins, Herbert},
+ year = {1963},
+ title = {An empirical Bayes approach to testing statistical hypotheses},
+ pages = {195-208},
+ volume = {2},
+ number = {31},
+ journal = {Review of the International Statistical Institute}
 }
 @article{Shannon1948,
  author = {Shannon, C. E.},
