--- a/doc/conglomerate.tex
+++ b/doc/conglomerate.tex
@@ -320,7 +320,7 @@
 \input{conglomerate_inference.texinput}
 \input{conglomerate_binning.texinput}
 \input{conglomerate_sampling.texinput}
-\input{conglomerate_dpm.texinput}
+\input{conglomerate_nonparametrics.texinput}
 
 % appendices (bibliography, index etc.)
 % --------------------------------------------------------------------------
