--- a/doc/conglomerate.bib
+++ b/doc/conglomerate.bib
@@ -39,6 +39,15 @@
   publisher = {Johns Hopkins University Press},
   isbn = {978-0801869822},
 }
+@article{Doksum1974,
+  title = {Tailfree and Neutral Random Probabilities and Their Posterior Distributions},
+  year = {1974},
+  author = {Kjell Doksum},
+  journal = {The Annals of Probability},
+  pages = {183--201},
+  volume = {2},
+  number = {2}
+}
 @article{Escobar1994,
   title = {Estimating Normal Means with a Dirichlet Process Prior},
   year = {1994},
@@ -88,6 +97,14 @@
   pages = {209--230},
   volume = {1},
   number = {2}
+}
+@incollection{Ferguson1992,
+  title = {Bayesian Nonparametric Inference},
+  year = {1992},
+  author = {Ferguson, Thomas S. and Phadia, Eswar G. and Tiwari, Ram C.},
+  booktitle = {Lecture Notes-Monograph Series; Current Issues in Statistical Inference; Essays in Honor of D. Basu},
+  pages = {127--150},
+  volume = {17},
 }
 @article{Freedman1963,
   title = {On the Asymptotic Behaviour of Bayes' Estimates in the Discrete Case},
