--- a/doc/conglomerate.bib
+++ b/doc/conglomerate.bib
@@ -169,6 +169,15 @@
   pages = {470--501},
   volume = {80},
 }
+@article{James1980,
+  title = {A new Characterization of the Dirichlet Distribution through Neutrality},
+  year = {1990},
+  author = {James, Ian R. and Mosimann, James E.},
+  journal = {The Annals of Statistics},
+  pages = {183--189},
+  volume = {8},
+  number = {1}
+}
 @book{Kolmogorov1933,
   title = {{Grundbegriffe der Wahrscheinlichkeitsrechnung}},
   publisher = {Springer},
@@ -186,6 +195,14 @@
  booktitle = {Studies in inductive logic and probability},
  year = {1980},
  address = {Berkeley}
+}
+@article{Lo1991,
+  title = {A characterization of the Dirichlet process},
+  year = {1991},
+  author = {Lo, Albert Y.},
+  journal = {Statistics and Probability Letters},
+  pages = {185--187},
+  volume = {12},
 }
 @incollection{Macdonald2005,
  author = {Ranald R. Macdonald},
@@ -289,6 +306,14 @@
  keywords = {Gaussian processes;digital arithmetic;Gaussian logarithms;approximate addition computation;approximate subtraction computation;very large positive numbers;very small positive numbers},
  pages = {129-132},
  journal = {Software Engineering, Artificial Intelligence, Networking and Parallel/Distributed Computing, 2005 and First ACIS International Workshop on Self-Assembling Wireless Networks. SNPD/SAWN 2005. Sixth International Conference on DOI - 10.1109/SNPD-SAWN.2005.61}
+}
+@article{Regazzini1978,
+ author = {Regazzini, E.},
+ year = {1978},
+ title = {Interno ad alcune questioni relative alla definizione del premio secondo la teoria della credibilit\`a},
+ pages = {77--89},
+ volume = {1--2},
+ journal = {Giornale dell'Instituto Italiano degli Attuari}
 }
 @incollection{Ramsey1931,
  author = {Frank P. Ramsey},
@@ -415,6 +440,15 @@
  volume = {},
  number = {},
  journal = {}
+}
+@article{Walker1999,
+ author = {Walker, Stephen and Muliere, Pietro},
+ year = {1999},
+ title = {A Characterization of a Neutral to the Right Prior via an Extension of Johnson's Sufficientness Postulate},
+ pages = {589--599},
+ volume = {27},
+ number = {2},
+ journal = {The Annals of Statistics}
 }
 @article{Zabell1982,
  author = {Zabell, Sandy L.},
