--- a/doc/conglomerate.tex
+++ b/doc/conglomerate.tex
@@ -149,8 +149,9 @@
 %\usepackage{chancery}
 %\usepackage{charter}
 %\usepackage{courier}
-%\usepackage{helvet}
-\usepackage{lmodern}
+\usepackage{helvet}
+%\usepackage{lmodern}
+%\usepackage{PTSerif}
 %\usepackage{txfonts}
 %\usepackage{newcent}
 %\usepackage{palatino}
