--- a/doc/conglomerate.bib
+++ b/doc/conglomerate.bib
@@ -169,6 +169,15 @@
   pages = {470--501},
   volume = {80},
 }
+@article{Ishwaran2002,
+  title = {Exact and Approximate Sum Representations for the Dirichlet Process},
+  year = {2002},
+  author = {Hemant Ishwaran and Mahmoud Zarepour},
+  journal = {The Canadian Journal of Statistics / La Revue Canadienne de Statistique},
+  pages = {269--283},
+  volume = {30},
+  number = {2}
+}
 @article{James1980,
   title = {A new Characterization of the Dirichlet Distribution through Neutrality},
   year = {1990},
