--- a/doc/conglomerate.bib
+++ b/doc/conglomerate.bib
@@ -64,6 +64,15 @@
   pages = {577--588},
   volume = {90},
 }
+@article{Fabius1964,
+  title = {Asymptotic Behavior of Bayes' Estimates},
+  year = {1964},
+  author = {Fabius, J.},
+  journal = {The Annals of Mathematical Statistics},
+  pages = {846--856},
+  volume = {35},
+  number = {2}
+}
 @book{Finetti1974,
   title = {Theory of Probability},
   publisher = {Wiley},
