--- a/doc/conglomerate_macros.sty
+++ b/doc/conglomerate_macros.sty
@@ -12,6 +12,9 @@
 \providecommand{\E}{\ensuremath{\mathrm{E}}}
 \providecommand{\Var}{\ensuremath{\mathrm{Var}}}
 
+\providecommand{\eqdist}{\ensuremath{\,{\buildrel \mathcal{D} \over =}\,}}
+\providecommand{\codist}{\ensuremath{\,{\buildrel \mathcal{D} \over \rightarrow}\,}}
+
 \newcommand{\Yf}{\boldsymbol{Y}}
 \newcommand{\Xf}{\boldsymbol{X}}
 \newcommand{\pf}{\boldsymbol{p}}
