--- a/doc/conglomerate.bib
+++ b/doc/conglomerate.bib
@@ -24,6 +24,15 @@
   volume = {1},
   number = {2},
 }
+@article{Bush1996,
+  title = {A Semiparametric Bayesian Model for Randomised Block Designs},
+  year = {1996},
+  author = {Bush, Christopher A. and MacEachtern, Steven N.},
+  journal = {Biometrika},
+  pages = {275--285},
+  volume = {83},
+  number = {2},
+}
 @article{Cox1946,
   title = {Probability, Frequency, and Reasonable Expectation},
   year = {1946},
