--- a/doc/conglomerate_macros.sty
+++ b/doc/conglomerate_macros.sty
@@ -8,6 +8,7 @@
 \providecommand{\Dir}{\ensuremath{\mathrm{Dir}}}
 \providecommand{\Beta}{\ensuremath{\mathrm{Beta}}}
 \providecommand{\DP}{\ensuremath{\mathrm{DP}}}
+\providecommand{\GEM}{\ensuremath{\mathrm{GEM}}}
 \providecommand{\Dis}{\ensuremath{\mathrm{Discrete}}}
 \providecommand{\E}{\ensuremath{\mathrm{E}}}
 \providecommand{\Var}{\ensuremath{\mathrm{Var}}}
