--- a/README
+++ b/README
@@ -2,30 +2,30 @@
 Binning examples
 --------------------------------------------------------------------------------
 
-./bayesian-binning.py -v -b -m data/binning/data1.cfg
-./bayesian-binning.py -m --which=1 data/binning/data1.cfg
+./bayesian-binning -v -b -m data/binning/data1.cfg
+./bayesian-binning -m --which=1 data/binning/data1.cfg
 
-./bayesian-binning.py -v -b -m data/binning-spikes/data1.cfg
+./bayesian-binning -v -b -m data/binning-spikes/data1.cfg
 
-./bayesian-binning.py -v -b -m --save=data/binning-spikes/data1.result data/binning-spikes/data1.cfg
-./bayesian-binning.py -v -b -m --load=data/binning-spikes/data1.result data/binning-spikes/data1.cfg
+./bayesian-binning -v -b -m --save=data/binning-spikes/data1.result data/binning-spikes/data1.cfg
+./bayesian-binning -v -b -m --load=data/binning-spikes/data1.result data/binning-spikes/data1.cfg
 
-./bayesian-binning.py -v -b -m -r '(0,0.1)' -s 0.001 --save=data/binning-spikes/data1.result data/binning-spikes/data1.cfg
+./bayesian-binning -v -b -m -r '(0,0.1)' -s 0.001 --save=data/binning-spikes/data1.result data/binning-spikes/data1.cfg
 
 Adaptive sampling examples
 --------------------------------------------------------------------------------
 
-./adaptive-sampling.py -n  10 -m data/sampling/data1.cfg
+./adaptive-sampling -n  10 -m data/sampling/data1.cfg
 
-./adaptive-sampling.py -n  10 -m --save=data/sampling/data1.result1 data/sampling/data1.cfg
-./adaptive-sampling.py -n  90 -m --load=data/sampling/data1.result1 --save=data/sampling/data1.result2 data/sampling/data1.cfg
-./adaptive-sampling.py -n 100 -m --load=data/sampling/data1.result2 --save=data/sampling/data1.result3 data/sampling/data1.cfg
+./adaptive-sampling -n  10 -m --save=data/sampling/data1.result1 data/sampling/data1.cfg
+./adaptive-sampling -n  90 -m --load=data/sampling/data1.result1 --save=data/sampling/data1.result2 data/sampling/data1.cfg
+./adaptive-sampling -n 100 -m --load=data/sampling/data1.result2 --save=data/sampling/data1.result3 data/sampling/data1.cfg
 
-./adaptive-sampling.py -m --load=data/sampling/data1.result3 data/sampling/data1.cfg
+./adaptive-sampling -m --load=data/sampling/data1.result3 data/sampling/data1.cfg
 
-./adaptive-sampling.py -n 100 -m --plot-utility data/sampling/data1.cfg
+./adaptive-sampling -n 100 -m --plot-utility data/sampling/data1.cfg
 
-./adaptive-sampling.py -m -n 400 --strategy=uniform --save=data/sampling/data1.result4 data/sampling/data1.cfg
+./adaptive-sampling -m -n 400 --strategy=uniform --save=data/sampling/data1.result4 data/sampling/data1.cfg
 
-./adaptive-sampling.py -n 5 -m --strategy=effective-counts data/sampling/data4.cfg 2>/dev/null
-./adaptive-sampling.py -n 5 -m --strategy=differential-gain data/sampling/data4.cfg 2>/dev/null
+./adaptive-sampling -n 5 -m --strategy=effective-counts data/sampling/data4.cfg 2>/dev/null
+./adaptive-sampling -n 5 -m --strategy=differential-gain data/sampling/data4.cfg 2>/dev/null
