--- a/adaptive-sampling.1
+++ b/adaptive-sampling.1
@@ -2,12 +2,12 @@
 .\"     Title: ADAPTIVE_SAMPLING
 .\"    Author: Philipp Benner <philipp.benner@mis.mpg.de>
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
-.\"      Date: 03/19/2011
+.\"      Date: 03/21/2011
 .\"    Manual: Adaptive Sampling User Manual
 .\"    Source: adaptive-sampling
 .\"  Language: English
 .\"
-.TH "ADAPTIVE_SAMPLING" "1" "03/19/2011" "adaptive-sampling" "Adaptive Sampling User Manual"
+.TH "ADAPTIVE_SAMPLING" "1" "03/21/2011" "adaptive-sampling" "Adaptive Sampling User Manual"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -28,7 +28,7 @@
 .\" * MAIN CONTENT STARTS HERE *
 .\" -----------------------------------------------------------------
 .SH "NAME"
-adaptive-sampling \- program to do something
+adaptive-sampling \- adaptive sampling for experiments with well\-ordered items
 .SH "SYNOPSIS"
 .HP \w'\fBadaptive\-sampling\fR\ 'u
 \fBadaptive\-sampling\fR \fB\-e\ \fR\fB\fIthis\fR\fR [\fB\-\-example=\fR\fBthat\fR] [{\fB\-e\fR\ |\ \fB\-\-example\fR}\ \fIthis\fR] [{\fB\-e\fR\ |\ \fB\-\-example\fR}\ {\fIthis\fR\ |\ \fIthat\fR}]
