--- a/bayesian-binning.1
+++ b/bayesian-binning.1
@@ -2,12 +2,12 @@
 .\"     Title: BAYESIAN_BINNING
 .\"    Author: Philipp Benner <philipp.benner@mis.mpg.de>
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
-.\"      Date: 03/19/2011
+.\"      Date: 03/21/2011
 .\"    Manual: Bayesian Binning User Manual
 .\"    Source: bayesian-binning
 .\"  Language: English
 .\"
-.TH "BAYESIAN_BINNING" "1" "03/19/2011" "bayesian-binning" "Bayesian Binning User Manual"
+.TH "BAYESIAN_BINNING" "1" "03/21/2011" "bayesian-binning" "Bayesian Binning User Manual"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -28,7 +28,7 @@
 .\" * MAIN CONTENT STARTS HERE *
 .\" -----------------------------------------------------------------
 .SH "NAME"
-bayesian-binning \- program to do something
+bayesian-binning \- Bayesian binning of well\-ordered data
 .SH "SYNOPSIS"
 .HP \w'\fBbayesian\-binning\fR\ 'u
 \fBbayesian\-binning\fR \fB\-e\ \fR\fB\fIthis\fR\fR [\fB\-\-example=\fR\fBthat\fR] [{\fB\-e\fR\ |\ \fB\-\-example\fR}\ \fIthis\fR] [{\fB\-e\fR\ |\ \fB\-\-example\fR}\ {\fIthis\fR\ |\ \fIthat\fR}]
